refactor: ControlSpec hierarchy